Added DynamoDb Integration and tests files